--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-  _______                     ________        __
+Openwrt-fork with also merged patches from mizy for orangepi zero with modded 32mib spirom
+
+
+_______                     ________        __
  |       |.-----.-----.-----.|  |  |  |.----.|  |_
  |   -   ||  _  |  -__|     ||  |  |  ||   _||   _|
  |_______||   __|_____|__|__||________||__|  |____|
